--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@gsap/react": "^2.1.2",
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
+    "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
+    "react-parallax": "^3.5.2",
     "react-router-dom": "^7.9.6",
     "react-toastify": "^11.0.5"
   },
